--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Courier New", Courier, monospace;
+  background: linear-gradient(89deg, #04C8DE 0%, #FF5EDF 100%);
 }
