--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,7 @@ body {
   font-family: "Courier New", Courier, monospace;
   background: linear-gradient(89deg, #04C8DE 0%, #FF5EDF 100%);
 }
+
+button {
+	cursor: pointer;
+}
